tests/custom/issues/365/stderr.expected
Error:
    Parser error in file: 365.essence Error is:
ValidatorError 365.essence:2:56:
  |
2 | find i : int(0..9) such that forAll j : int(0..9) . j <> i
  |                                                        ^
Missing Expr

365.essence:2:58:
  |
2 | find i : int(0..9) such that forAll j : int(0..9) . j <> i
  |                                                          ^
Type error:
	Expected: bool
	Got: int

